<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcularAutonomia">

    <ImageView
        android:id="@+id/image_calcular_autonomia_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_close"
        android:contentDescription="@string/close"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_calcular_autonomia_label_calcular"/>

    <TextView
        android:id="@+id/text_calcular_autonomia_label_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_autonomia"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/image_calcular_autonomia_close"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_calcular_autonomia_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:hint="@string/pre_o_kwh"
        android:inputType="numberDecimal"
        android:autofillHints="null"
        android:maxLength="10"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toTopOf="@id/text_calcular_autonomia_label_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_calcular_autonomia_km_percorrido"/>

    <EditText
        android:id="@+id/edit_calcular_autonomia_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/km_percorrido"
        android:inputType="number"
        android:autofillHints="null"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="@id/edit_calcular_autonomia_preco_kwh"
        app:layout_constraintEnd_toEndOf="@id/edit_calcular_autonomia_preco_kwh"
        app:layout_constraintTop_toBottomOf="@id/edit_calcular_autonomia_preco_kwh"
        app:layout_constraintBottom_toTopOf="@id/button_calcular_autonomia_calcular"/>

    <Button
        android:id="@+id/button_calcular_autonomia_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="32dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@id/edit_calcular_autonomia_preco_kwh"
        app:layout_constraintEnd_toEndOf="@id/edit_calcular_autonomia_preco_kwh"
        app:layout_constraintTop_toBottomOf="@id/edit_calcular_autonomia_km_percorrido"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_calcular_autonomia_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="@id/button_calcular_autonomia_calcular"
        app:layout_constraintTop_toBottomOf="@id/button_calcular_autonomia_calcular"/>

</androidx.constraintlayout.widget.ConstraintLayout>