<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletric_car"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_main_tab_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_main_title"/>

    <TextView
        android:id="@+id/text_main_tab_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/text_main_tab_carros"
        app:layout_constraintTop_toTopOf="@id/text_main_tab_carros"/>

    <ImageView
        android:id="@+id/image_main_eletric_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_carro"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_main_tab_carros"/>

    <TextView
        android:id="@+id/text_main_label_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Preco"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_main_eletric_car"/>

    <TextView
        android:id="@+id/text_main_label_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 300.000,00"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/text_main_label_preco"
        app:layout_constraintTop_toTopOf="@id/text_main_label_preco"/>

    <TextView
        android:id="@+id/text_main_label_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Bateria"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/text_main_label_preco"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_main_label_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="93,4 kW/h"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/text_main_label_bateria"
        app:layout_constraintStart_toEndOf="@id/text_main_label_bateria"/>

    <TextView
        android:id="@+id/text_main_label_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Potencia"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_main_label_bateria"/>

    <TextView
        android:id="@+id/text_main_label_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="646 cv"
        app:layout_constraintStart_toEndOf="@id/text_main_label_potencia"
        app:layout_constraintTop_toTopOf="@id/text_main_label_potencia"/>

    <TextView
        android:id="@+id/text_main_label_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="Recarga"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_main_label_potencia"/>

    <TextView
        android:id="@+id/text_main_label_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/text_main_label_recarga"
        app:layout_constraintStart_toEndOf="@id/text_main_label_recarga"/>

</androidx.constraintlayout.widget.ConstraintLayout>